    a class of printers (special, regular or both). An application just
    needs to create a KPrintAction anc connect to print(KPrinter*).

31/08/2001 Michael Goffioul <goffioul@imec.be>
  * CUPS plugin: fix crash for Qt3 port, must check if attr->name is NULL
    before comparing it with strcmp or strncmp.

12/09/2001 Michael Goffioul <goffioul@imec.be>
  * Management library: set all toolbars non movable to avoid move handles

13/09/2001 Michael Goffioul <goffioul@imec.be>
  * CUPS plugin: fix multiple showing of password dialog for password-
    protected printers (timer is now blocked when the password dialog is
    shown)

14/09/2001 Michael Goffioul <goffioul@imec.be>
  * CUPS plugin: configuration wizard rewritten using the structure of
    ESP PrintPro: more consistent, less pages and widgets. Not used as
    default config wizard yet.
  * QList -> QPtrList

25/09/2001 Michael Goffioul <goffioul@imec.be>
  * CUPS plugin: made the new configuration wizard as default one.
  * other QList -> QPtrList fixes (commited to CVS)
  * Avoid to call plugin functions "completePrinter<xxx>" for pseudo
    printers (to not confuse the CUPS daemon for example)
  * Improved how the default printer is selected in print dialog to
    work in any cases
  * General: make use of KLocale::pageSize() to determine the default
    page size (used for example for pseudo printers and classes)
  * Wizard: fix buffer overflow when adding a remote LPD queue having
    a lot of jobs waiting

03/10/2001 Michael Goffioul <goffioul@imec.be>
  * CUPS plugin: make use of GET/PUT request to handle configuration
    file. Possibility to admin a remote CUPS server (if allowed)
  * CUPS plugin: added "/jobs" in the available resources list

09/10/2001 Michael Goffioul <goffioul@imec.be>
  * CUPS plugin: added 2 missing pages in stand-alone mode, "Image"
    and "Text".

10/10/2001 Michael Goffioul <goffioul@imec.be>
  * CUPS plugin: "HP-GL/2" page added